--- a/view/avatar/change/css/style.css
+++ b/view/avatar/change/css/style.css
@@ -1,8 +1,34 @@
+
+
+  @charset "utf-8";
+
+body {
+	background-color: #ffffff;
+	padding: 20px;
+}
+
+.radio {
+	display: none;
+}
+
+.radio + .radio_image {
+	border: 3px #ffffff solid;
+	background-color: #ffffff;
+}
+.radio:checked + .radio_image {
+	border: 3px #ff0000 solid;
+	background-color: #ffeeee;
+}
+
+
+
+
 input {
-    display: none;
-  }
+  display: none;
+}
 
 /*チェック中のラベルにCSSを適用*/
-  input:checked + label img {
-    border: 8px solid red;
-  }
+input:checked + label img {
+  border: 8px solid red;
+}
+
