--- a/view/account/review/main/template.html
+++ b/view/account/review/main/template.html
@@ -9,7 +9,7 @@
 
         <div class="w-100">
             <div>レビュー内容</div>
-            <div class="d-flex">
+            <div class="d-flex overflow-wrap: break-word">
                 <div id="review" class="text-overflow w-100"style="height:20px"></div>
             </div>
             
