--- a/view/search/distance/css/style.css
+++ b/view/search/distance/css/style.css
@@ -5,7 +5,7 @@
  
   background-size:cover;                 
   width:100%;                             
-  height: 600px; 
+  height: 100%; /*600px*/
   
 }
 
