--- a/view/profile/description/css/style.css
+++ b/view/profile/description/css/style.css
@@ -47,3 +47,11 @@ div p {
 .haikei{
   background-image: url("images/background/banner.jpg");
 }
+
+.fa{
+  font-size:15px;
+  color:gold;
+}
+#rating{
+  font-size:0;
+}
