--- a/view/search/genre/main/template.html
+++ b/view/search/genre/main/template.html
@@ -7,7 +7,8 @@
             <div class="shopname shop_font"></div>
             <div class="d-flex">
                 <div class="shop_font">評価:</div>
-                <div class="shopscore shop_font"></div>
+                <div id="rating" class="ms-2 mt-2 w-auto shop_font">
+                </div>
             </div>
         </div>
     </div>
