--- a/view/main/home/css/main.css
+++ b/view/main/home/css/main.css
@@ -71,3 +71,14 @@
     margin-left: 5px;
     margin-right: 5px;
 }
+a.btn-border {
+    border: 2px solid #000;
+    border-radius: 0;
+    background: #fff;
+  
+    -webkit-transform-style: preserve-3d;
+  
+    transform-style: preserve-3d;
+  }
+  
+  
