--- a/view/profile/description/main/template.html
+++ b/view/profile/description/main/template.html
@@ -1,6 +1,6 @@
 <ul class="list-group list-group-horizontal w-100">
 
-    <li class="container list-group-item w-100" style="height: 110px;">
+    <li class="container list-group-item w-100 shop_data" style="height: 110px;cursor:pointer;" title="店舗ページへ">
         <div id="name" class=" text-truncate "></div>
         <div class="d-flex">
             <div>評価:</div>
