--- a/view/search/genre/main/template.html
+++ b/view/search/genre/main/template.html
@@ -1,6 +1,6 @@
 <ul class="list-group list-group-horizontal shopbtn" style="cursor:pointer;">
     <div class="list-group-item">
-        <img src="" class="shopimage">
+        <img src="" class="shopimage" width="100px" height="100px" loading="lazy" alt="店舗画像">
     </div>
     <div class="list-group-item w-100">
         <div >
