--- a/libs/css/applyToAll.css
+++ b/libs/css/applyToAll.css
@@ -1,10 +1,42 @@
-body{
-    min-width: 1000px;
+a{
+    text-decoration: none;
 }
 
+.icon_btn,
+a,
 img {
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+}
+
+.user-select-none{
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.scrollbar1::-webkit-scrollbar {
+    width: 10px;
+    /* 垂直方向のスクロールバーの幅 */
+    height: 10px;
+    /* 水平方向のスクロールバーの幅 */
+}
+
+.scrollbar1::-webkit-scrollbar-thumb {
+    background-color: rgb(150, 150, 150);
+    border-radius: 5px;
+    box-shadow: inset 3px 3px 3px rgba(255, 255, 255, 0.2);
+}
+
+.scrollbar1::-webkit-scrollbar-track {
+    background-color: rgb(220, 220, 220);
+    border-radius: 5px;
+    box-shadow: inset 3px -3px 5px rgba(0, 0, 0, 0.2);
+}
+
+.scrollbar1::-webkit-scrollbar-corner {
+    display: none;
 }
