--- a/libs/css/loader.css
+++ b/libs/css/loader.css
@@ -1,7 +1,12 @@
 #loader{
-  position: relative;
-  top:150px;
-  opacity: 0;
+  position:fixed;
+  height:100%;
+  width:100%;
+  left:0px;
+  top:0px;
+  z-index: 9999;
+  opacity: 0.4;
+  display: block;
 }
 .loader,
 .loader:before,
@@ -15,9 +20,10 @@
   animation: load7 1.8s infinite ease-in-out;
 }
 .loader {
+  top:50%;
   color: #0f0d0d;
   font-size: 10px;
-  margin: 80px auto;
+  margin: -20px auto;
   position: relative;
   text-indent: -9999em;
   -webkit-transform: translateZ(0);
