--- a/view/account/mypage/css/style.css
+++ b/view/account/mypage/css/style.css
@@ -1,5 +1,47 @@
 .mozi {
-    font-family: 'Noto Serif JP', serif;
-    
+    font-family: 'Pacifico', cursive;
 }
-
+.button_line001 a {
+    position: relative;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 0 auto;
+    max-width: 200px;
+    padding: 10px 25px;
+    color: #313131;
+    transition: 0.3s ease-in-out;
+    font-weight: 600;
+    text-decoration: none;
+}
+.button_line001 a:before {
+    position: absolute;
+    bottom: 0px;
+    left: 50%;
+    content: '';
+    width: 100%;
+    height: 2px;
+    background: rgba(0,0,0,.1);
+    transform: translateX(-50%);
+}
+.button_line001 a:after {
+    position: absolute;
+    bottom: 0px;
+    left: 0;
+    content: '';
+    width: 100%;
+    height: 2px;
+    background: #000;
+    transform: scale(0, 1);
+    transform-origin: left top;
+    transition: transform .3s;
+}
+.button_line001 a:hover {
+    opacity: 0.7;
+}
+.button_line001 a:hover:after {
+    transform: scale(1, 1);
+}
+.i {
+    background-image: url("/var/www/html/images/background/onigiri.png");
+}
