--- a/view/main/home/css/main.css
+++ b/view/main/home/css/main.css
@@ -1,62 +1,78 @@
+.sample02 {
+    margin: 0 auto 40px;
+    width: 100%;
+    font-size: 100px;
+    text-align: center;
+    overflow: hidden;
+}
+
+.sample02 ul {
+    margin: 0;
+    display: inline-block;
+    padding-left: 100%;
+    white-space: nowrap;
+    line-height: 1em;
+    animation: scrollSample02 30s linear infinite;
+}
+
+.sample02 ul li {
+    display: inline;
+    margin: 0 100px 0 0;
+}
+
+.sample02 ul li:nth-child(1) {
+    font-weight: bold;
+}
+
+.sample02 ul li:nth-child(2) {
+    color: #F00;
+}
+
+.sample02 ul li:nth-child(3) {
+    font-style: italic;
+}
+
+.sample02 ul li:last-child {
+    color: #F90;
+    margin: 0;
+}
+
+@keyframes scrollSample02 {
+    0% {
+        transform: translateX(0)
+    }
+
+    100% {
+        transform: translateX(-100%)
+    }
+}
 
 .sample02 {
-    margin : 0 auto 40px;
-    width : 100%;
-    font-size : 100px;
-    text-align : center;
-    overflow : hidden;
-}
-    .sample02 ul{
-    margin:0;
-    display : inline-block;
-    padding-left: 100%;
-    white-space : nowrap;
-    line-height : 1em;
-    animation : scrollSample02 30s linear infinite;
-}
-    .sample02 ul li{
-    display:inline;
-    margin:0 100px 0 0;
-}
-    .sample02 ul li:nth-child(1){
-    font-weight:bold;
-}
-    .sample02 ul li:nth-child(2){
-    color:#F00;
-}
-    .sample02 ul li:nth-child(3){
-    font-style:italic;
-}
-    .sample02 ul li:last-child{
-    color:#F90;
-    margin:0;
-}
-    @keyframes scrollSample02{
-    0% { transform: translateX(0)}
-    100% { transform: translateX(-100%)}
-}
-.sample02{
-    margin:2em 0;
+    margin: 2em 0;
     position: relative;
     padding: 0.25em 1em;
 }
-.sample02:before,.box18:after
-{
+
+.sample02:before,
+.box18:after {
     content: '';
     position: absolute;
-    width:10px;
+    width: 10px;
     height: 10px;
 }
+
 .sample02:after {
-    top:-12px;
-    left:-12px;
+    top: -12px;
+    left: -12px;
 }
+
 .sample02:before {
-    bottom:-12px;
-    right:-12px;
+    bottom: -12px;
+    right: -12px;
 }
+
 .sample02 p {
-    margin: 0; 
+    margin: 0;
     padding: 0;
 }
 
@@ -65,20 +81,59 @@
     z-index: 0;
 }
 
-.shop_div{
+.shop_div {
     width: 100px;
     height: 100px;
     margin-left: 5px;
     margin-right: 5px;
 }
+
 a.btn-border {
     border: 2px solid #000;
     border-radius: 0;
     background: #fff;
-  
+
     -webkit-transform-style: preserve-3d;
-  
+
     transform-style: preserve-3d;
-  }
-  
-  
+}
+/* スクロールバーの設定 */
+.recent_shop_name {
+    max-height: 50px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+#recently_shop {
+    max-height: 160px;
+    overflow-y: hidden;
+
+}
+
+#recently_shop::-webkit-scrollbar {
+    width: 10px;
+    /* 垂直方向のスクロールバーの幅 */
+    height: 10px;
+    /* 水平方向のスクロールバーの幅 */
+}
+
+#recently_shop::-webkit-scrollbar-thumb {
+    background-color: rgb(150, 150, 150);
+    border-radius: 5px;
+    box-shadow: inset 3px 3px 3px rgba(255, 255, 255, 0.2);
+}
+
+#recently_shop::-webkit-scrollbar-track {
+    background-color: rgb(220, 220, 220);
+    border-radius: 5px;
+    box-shadow: inset 3px -3px 5px rgba(0, 0, 0, 0.2);
+}
+
+#recently_shop::-webkit-scrollbar-corner {
+    display: none;
+}
+
+#shop_updata{
+    color: #313131;
+    font-weight: 600;
+}
