--- a/view/shop/edit_data/css/multiple.css
+++ b/view/shop/edit_data/css/multiple.css
@@ -1,7 +1,30 @@
+.selectTag{
+    display: block;
+    width: 20%;
+    padding: .375rem 1.75rem .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-color: #fff;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e");
+    background-repeat: no-repeat;
+    background-position: right .75rem center;
+    background-size: 16px 12px;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+
 .selectMultiple {
     width: 240px;
     position: relative;
     border-color: #1E2330;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    
 }
 
 .selectMultiple select {
@@ -149,6 +172,7 @@
 
 .selectMultiple>div a.notShown.shown {
     opacity: 1;
+    text-decoration: none;
 }
 
 .selectMultiple>div a.notShown.shown:before {
@@ -321,6 +345,10 @@
         opacity: 0;
         transform: scale(50, 50);
     }
+}
+
+.notShown div{
+    text-decoration: none;
 }
 
 @keyframes ripple {
