--- a/view/profile/description/main/template.html
+++ b/view/profile/description/main/template.html
@@ -10,7 +10,7 @@
 
         <div class="w-100">
             <div>レビュー内容</div>
-            <div class="d-flex overflow-wrap: break-word">
+            <div class="d-flex" style="overflow-wrap: break-word">
                 <div id="review" class="text-overflow w-100"style="height:20px"></div>
             </div>
             
