--- a/view/search/genre/main/template.html
+++ b/view/search/genre/main/template.html
@@ -5,9 +5,9 @@
     <div class="list-group-item w-100">
         <div >
             <div class="shopname shop_font"></div>
-            <div class="d-flex">
+            <div class="d-flex align-items-center">
                 <div class="shop_font">評価:</div>
-                <div id="rating" class="ms-2 mt-2 w-auto shop_font">
+                <div id="rating" class="w-auto shop_font">
                 </div>
             </div>
         </div>
