--- a/libs/css/applyToAll.css
+++ b/libs/css/applyToAll.css
@@ -92,3 +92,24 @@ img {
 .font-kosugi{
     font-family: 'Kosugi Maru', sans-serif;
 }
+
+a.btn_18 {
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    position: relative;
+    width: auto;
+    margin: 20px;
+    padding: 1rem 1rem;
+    font-weight: bold;
+    border-radius: 10px;
+    color: #27acd9;
+    border: 3px solid #27acd9;
+    box-shadow: 3px 3px #27acd9;
+    transition: 0.3s ease-in-out;
+  }
+  a.btn_18:hover {
+    box-shadow: none;
+    transform: translate(3px, 3px);
+    color: #27acd9;
+  }
