--- a/view/account/review/main/template.html
+++ b/view/account/review/main/template.html
@@ -22,10 +22,22 @@
 
         </div>
     </li>
-    <li class="list-group-item p-1" style="width:90px">
-        <input type="button" class="btn btn-primary my-2 ms-0 change_btn" name="change" value="変更"
-            style="height: 35px; width:70px;">
-        <input type="button" class="btn btn-dark my-2 ms-0 delete_btn" name="delete" value="削除"
-            style="height: 35px; width:70px;">
+
+    <li class="list-group-item d-flex align-items-center" style="width:90px">
+        <span class="material-symbols-outlined more_horiz user-select-none"></span>
+        <div class="more_horiz-modal user-select-none">
+            <div class="d-flex justify-content-center">
+                <a class="change_btn">
+                    <i class="fa-solid fa-pen-to-square"></i>変更
+                </a>
+            </div>
+            <div class="d-flex justify-content-center">
+                <a class="delete_btn">
+                    <i class="fa-solid fa-trash"></i>削除
+                </a>
+            </div>
+        </div>
+
     </li>
+
 </ul>
