--- a/view/avatar/change/css/style.css
+++ b/view/avatar/change/css/style.css
@@ -22,7 +22,8 @@
 }
 
 .overflow-div {
-    width: 640px;
+    max-width: 640px;
+    min-width: 300px;
     border: solid 1px;
     overflow-x: hidden;
     overflow-y: auto;
@@ -43,3 +44,49 @@
     user-select: none;
 	cursor: pointer;
 }
+
+.item-img:hover .radio_image{
+	border: #ffeeee;
+}
+
+
+
+a.btn{
+  font-size: 1.6rem;
+  font-weight: 700;
+  line-height: 0.5;
+  position: relative;
+  display: inline-block;
+  padding: 1rem 0rem;
+  width: calc(100%/3);
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  text-align: center;
+  vertical-align: middle;
+  text-decoration: none;
+  letter-spacing: 0.1em;
+  color: #212529;
+  border-radius: 0.5rem;
+}
+a.btn-solid {
+	color: #fff;
+	border-top: 4px solid #48ecc4;
+	border-right: 4px solid #0a5f4a;
+	border-bottom: 4px solid #0f745b;
+	border-left: 4px solid #8cf9de;
+	border-radius: 0;
+	background: #11a37f;
+  }
+  
+  a.btn-solid:hover {
+	color: #fff;
+	border-top: 4px solid #0f745b;
+	border-right: 4px solid #8cf9de;
+	border-bottom: 4px solid #48ecc4;
+	border-left: 4px solid #0a5f4a;
+  }
