--- a/view/search/distance/css/style.css
+++ b/view/search/distance/css/style.css
@@ -2,10 +2,10 @@
 @charset "utf-8";
 
 .back{
- 
+ background-image:image("/var/www/html/images/background/onigiri.png") ;
   background-size:cover;                 
   width:100%;                             
-  height: 100%; /*600px*/
+  height:100%; /*600px*/
   
 }
 
