--- a/view/search/genre/css/shop_phone.css
+++ b/view/search/genre/css/shop_phone.css
@@ -2,3 +2,12 @@
     width: 50px;
     height: 50px;
 }
+
+.shopname{
+    height: 22px;
+    overflow: hidden;
+}
+
+.fa {
+    font-size: 15px;
+}
