--- a/view/search/genre/css/style.css
+++ b/view/search/genre/css/style.css
@@ -1,13 +1,13 @@
-
-.text_img{
+.text_img {
     width: 10px;
     height: 10px;
     vertical-align: middle;
 }
+
 .pointtext {
-	margin: 16px auto;
-	width: 500px;
-	display: block;
+    margin: 16px auto;
+    width: 500px;
+    display: block;
 }
 
 .mytext {
@@ -16,74 +16,96 @@
 
 
 .sample02 {
-    margin : 0 auto 40px;
-    width : 100%;
-    font-size : 100px;
-    text-align : center;
-    overflow : hidden;
+    margin: 0 auto 40px;
+    width: 100%;
+    font-size: 100px;
+    text-align: center;
+    overflow: hidden;
 }
-    .sample02 ul{
-    margin:0;
-    display : inline-block;
+
+.sample02 ul {
+    margin: 0;
+    display: inline-block;
     padding-left: 100%;
-    white-space : nowrap;
-    line-height : 1em;
-    animation : scrollSample02 30s linear infinite;
+    white-space: nowrap;
+    line-height: 1em;
+    animation: scrollSample02 30s linear infinite;
 }
-    .sample02 ul li{
-    display:inline;
-    margin:0 100px 0 0;
+
+.sample02 ul li {
+    display: inline;
+    margin: 0 100px 0 0;
 }
-    .sample02 ul li:nth-child(1){
-    font-weight:bold;
+
+.sample02 ul li:nth-child(1) {
+    font-weight: bold;
 }
-    .sample02 ul li:nth-child(2){
-    color:#F00;
+
+.sample02 ul li:nth-child(2) {
+    color: #F00;
 }
-    .sample02 ul li:nth-child(3){
-    font-style:italic;
+
+.sample02 ul li:nth-child(3) {
+    font-style: italic;
 }
-    .sample02 ul li:last-child{
-    color:#F90;
-    margin:0;
+
+.sample02 ul li:last-child {
+    color: #F90;
+    margin: 0;
 }
-    @keyframes scrollSample02{
-    0% { transform: translateX(0)}
-    100% { transform: translateX(-100%)}
+
+@keyframes scrollSample02 {
+    0% {
+        transform: translateX(0)
+    }
+
+    100% {
+        transform: translateX(-100%)
+    }
 }
-.sample02{
-    margin:2em 0;
+
+.sample02 {
+    margin: 2em 0;
     position: relative;
     padding: 0.25em 1em;
     border: solid 2px #ffcb8a;
     border-radius: 3px 0 3px 0;
 }
-.sample02:before,.box18:after
-{
+
+.sample02:before,
+.box18:after {
     content: '';
     position: absolute;
-    width:10px;
+    width: 10px;
     height: 10px;
     border: solid 2px #ffcb8a;
     border-radius: 50%;
 }
+
 .sample02:after {
-    top:-12px;
-    left:-12px;
+    top: -12px;
+    left: -12px;
 }
+
 .sample02:before {
-    bottom:-12px;
-    right:-12px;
+    bottom: -12px;
+    right: -12px;
 }
+
 .sample02 p {
-    margin: 0; 
+    margin: 0;
     padding: 0;
 }
 
-.fa{
-    font-size:20px;
-    color:gold;
-  }
-  #rating{
-    font-size:0;
-  }
+.fa {
+    font-size: 20px;
+    color: gold;
+}
+
+#rating {
+    font-size: 0;
+}
+
+.shop_font{
+    font-family: 'Kosugi Maru', sans-serif;
+}
