--- a/view/search/name/main/template.html
+++ b/view/search/name/main/template.html
@@ -1,14 +1,16 @@
-<ul class="list-group list-group-horizontal shopbtn" style="cursor:pointer;">
+<ul class="list-group list-group-horizontal shopbtn" style="cursor:pointer;" title="店舗ページへ">
     <div class="list-group-item">
         <img src="" class="shopimage" width="100px" height="100px" loading="lazy" alt="店舗画像">
     </div>
     <div class="list-group-item w-100">
         <div >
             <div class="shopname shop_font"></div>
-            <div class="d-flex">
+            <div class="d-flex" >
                 <div class="shop_font">評価:</div>
-                <div id="rating" class="ms-2 mt-2 w-auto shop_font">
+                <div class="d-flex align-items-center">
+                    <div id="rating" class="w-auto shop_font"></div>
                 </div>
+                
             </div>
         </div>
     </div>
