--- a/view/account/review/main/template.html
+++ b/view/account/review/main/template.html
@@ -24,7 +24,7 @@
     </li>
 
     <li class="list-group-item d-flex align-items-center" style="width:90px">
-        <span class="material-symbols-outlined more_horiz user-select-none"></span>
+        <span class="material-symbols-outlined more_horiz user-select-none">more_horiz</span>
         <div class="more_horiz-modal user-select-none">
             <div class="d-flex justify-content-center">
                 <a class="change_btn">
