--- a/libs/css/applyToAll.css
+++ b/libs/css/applyToAll.css
@@ -1,4 +1,4 @@
-body{
+body {
     overflow-x: auto;
     display: none;
 }
@@ -37,7 +37,7 @@ img {
     user-select: none;
 }
 
-.user-select-none{
+.user-select-none {
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
@@ -68,32 +68,35 @@ img {
 }
 
 /* bootstrapのフォームの影を修正 */
-.form-control:focus{
+.form-control:focus {
     box-shadow: none;
 }
 
 
 
 .font-tester {
-	font-family: 'Bungee Inline', cursive;
-	font-family: 'DotGothic16', sans-serif;
-	font-family: 'Klee One', cursive;
-	font-family: 'Kosugi Maru', sans-serif;
-	font-family: 'Rampart One', cursive;
-	font-family: 'Sawarabi Mincho', serif;
-	font-family: 'Train One', cursive;
-	font-family: 'Yomogi', cursive;
+    font-family: 'Bungee Inline', cursive;
+    font-family: 'DotGothic16', sans-serif;
+    font-family: 'Klee One', cursive;
+    font-family: 'Kosugi Maru', sans-serif;
+    font-family: 'Rampart One', cursive;
+    font-family: 'Sawarabi Mincho', serif;
+    font-family: 'Train One', cursive;
+    font-family: 'Yomogi', cursive;
 }
 
-.font-klee{
+.font-klee {
     font-family: 'Klee One', cursive;
 }
 
-.font-kosugi{
+.font-kosugi {
     font-family: 'Kosugi Maru', sans-serif;
 }
 
-a.btn_18 {
+a.btn_18{
+    color: #27acd9;
+}
+.btn_18 {
     display: block;
     text-align: center;
     text-decoration: none;
@@ -104,12 +107,22 @@ a.btn_18 {
     font-weight: bold;
     border-radius: 10px;
     color: #27acd9;
+    background-color: #fff;
     border: 3px solid #27acd9;
     box-shadow: 3px 3px #27acd9;
     transition: 0.3s ease-in-out;
-  }
-  a.btn_18:hover {
+}
+
+.btn_18:hover:not(.btn_18:disabled){
     box-shadow: none;
     transform: translate(3px, 3px);
     color: #27acd9;
-  }
+}
+
+.btn_18:disabled{
+    opacity: 0.6;
+}
+
+.btn_18:focus,.btn_18:focus-visible {
+    outline:none;
+}
