--- a/view/account/review/main/template1.html
+++ b/view/account/review/main/template1.html
@@ -2,5 +2,5 @@
     <h4>レビューはありません</h4>
 </div>
 <div class="d-flex justify-content-center">
-    <a href="/view/account/mypage/" class="btn btn-primary btn-lg" type="button" style="color:azure">戻る</a>
+    <a href="/view/account/mypage/" class="btn_18" type="button">戻る</a>
 </div>
