--- a/view/avatar/change/css/icon.css
+++ b/view/avatar/change/css/icon.css
@@ -31,7 +31,13 @@
 .user_icon4{
     position:  absolute;        /* 位置指定 */
     z-index: 40;               /* 重なり順指定 */
-    top: 60px;
+    top: 50px;
+    left: -10px;
+}
+
+.user_icon4 img{
+    height:  100px;             /* 高さ指定 */
+    width:  120px;              /* 幅指定 */
 }
 
 img{
